feat: Add Nameplate healthbar and configurable target show distance

--- a/SimpleEntityHealthbar/SimpleEntityHealthbar.csproj
+++ b/SimpleEntityHealthbar/SimpleEntityHealthbar.csproj
@@ -14,6 +14,11 @@
     </Reference>
     <Reference Include="VintagestoryLib">
       <HintPath>$(VINTAGE_STORY)/VintagestoryLib.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="VSEssentials">
+      <HintPath>$(VINTAGE_STORY)/Mods/VSEssentials.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VSSurvivalMod">
       <HintPath>$(VINTAGE_STORY)/Mods/VSSurvivalMod.dll</HintPath>
